# brainstorm

./: .clang-format  .env  .env_example  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  artifact_README.md  bootstrap.sh  build_env.sh  config.yaml  gen_comp_cmd.py  log  model_logs  report2.qdrep  requirements.txt  requirements_ae.txt  setup.py
.cache/: ckpt  dataset  kernel_db.sqlite
amlt/: aml_k8s_config.yaml
azure/: az_func.sh  az_funcs  init.sh  prepare_data.sh
azure/amlt/: singularity_config.yaml  status_report.py
azure/blob/: blobfuse.cfg  download_kernel_db.sh  mount.sh  prepare_dataset_ckpt.sh  upload_kernel_db.sh
azure/vscode/: settings.json  settings_global.json
backup/: symbolic.py
benchmark/: CMakeLists.txt
benchmark/albert/: beam_search.py  generation_utils.py  modeling_albert.py  modeling_utils.py  text_gen.py
benchmark/classsr/: run_test_DIV2K.sh  test_fuse.ipynb
benchmark/dynamic_routing/: Figure22.sh  Figure23.sh  backbone.py  backbone_brt.py  base_config.py  benchmark.py  benchmark_liveness.py  benchmark_liveness.sh  benchmark_memory_plan.sh  benchmark_preload.sh  benchmark_weightload.py  brainstorm.code-workspace  brt_backbone.py  brt_cell.py  c_load  cell.py  cell_brt.py  cell_brt_fused.py  collect_history.sh  dataset.py  debug.sh  dynamic_A_config.py  dynamic_A_histroy.json  dynamic_B_config.py  dynamic_B_net.py  dynamic_C_config.py  dynamic_raw_config.py  dynamic_raw_net.py  dynamic_test_config.py  foo.txt  macro.py  net.py  net_brt.py  ops.py  origin_net.py  overhead.py  raw_load  router.py  run_all_benchmarks.sh  run_all_load_benchmark.sh  (+11 more)
benchmark/livesr/: bench_capture.py  benchmark.py  benchmark.sh  capture_benchmark.py  dataset.py  extract_kmeans.ipynb  figure_16.py  figure_16.sh  kmeans_10.pkl  kmeans_4.pkl  kmeans_6.pkl  kmeans_8.pkl  livesr.py  search_fuse.ipynb  test.py
benchmark/mdsnet/: args.py  main.py  mdsnet.py
benchmark/msdnet/: adaptive_inference.py  aftertransgraphcode.txt  aftertransgraphcode1.txt  aftertransgraphnode.txt  all_opt.sh  allfuse.sh  args.py  benchmark.ipynb  benchmark.sh  const_propagation.sh  dataloader.py  debug  debug1  eliminate_passcode1.txt  eval_with_threshold.sh  figure_20.sh  find_threshold.sh  foo.cu  foo.txt  foooo.txt  fuse.sh  fusebenchmark.py  gen_json.py  graphnode1.txt  hfuse.sh  horizon_msdnet.py  main.py  msdnet.json  msdnet.py  newtime.sh  node.txt  op_counter.py  recordingtest.txt  recordingtest1.txt  recordingtest2.txt  recordingtest3.txt  recordingtest4txt  single_test.sh  singlecase.sh  test_threshold.sh  (+5 more)
benchmark/ranet/: main.py  ranet.py
benchmark/stochastic_moe/: moe_layer.py
benchmark/swin_moe/: .gitignore  adaptive_load.sh  benchmark copy.sh  benchmark.py  benchmark.sh  benchmark_brt.sh  benchmark_brt_dist.sh  benchmark_pt.sh  benchmark_tutel.sh  config.py  dump_result.py  dump_trace.sh  gather_ckpt.sh  load_plot.py  lr_scheduler.py  main.py  main_fp32.py  merge_placement.py  micro_benchmark.py  optimizer.py  overhead.py  placement.16.23.9  placement.16.best  placement.2.best  placement.4.best  placement.8.best  placement.py  placement_cvxpy.py  placement_gurobi.py  process_result.py  protocol.ipynb  requirements.txt  results_2.npy.best  results_4.npy.11.5  results_8.npy.best  run.md  run_all_benchmark.sh  run_all_benchmarks.sh  run_all_micro_benchmarks.sh  run_benchmark.sh  (+5 more)
benchmark/switch_moe/: benchmark.py  config.py  origin.py  run_all_benchmarks.sh  run_benchmark.sh  switch_expert.py  switch_transformer.py
benchmark/task_moe/: benchmark.py  configuration_bert_generation.py  expert.py  modeling_bert_generation.py  moe_layer.py  overhead.py  process_result.py  run_all_benchmarks.sh  run_benchmark.sh  run_overhead.sh  test.py  test.txt  text.py
benchmark/thor/: 218090bc617f9a36fbabdf253ec28064_[64, 512]_[512, 512]_[64, 512].cu  32a5ff201401d5600f77ced9f22defaa_[2, 32, 1024]_[2, 512, 1024]_[2, 32, 512].cu  32a5ff201401d5600f77ced9f22defaa_[2, 32, 512]_[2, 1024, 512]_[2, 32, 1024].cu  32a5ff201401d5600f77ced9f22defaa_[64, 1, 1024]_[64, 512, 1024]_[64, 1, 512].cu  32a5ff201401d5600f77ced9f22defaa_[64, 1, 512]_[64, 1024, 512]_[64, 1, 1024].cu  32a5ff201401d5600f77ced9f22defaa_[8, 64, 64]_[8, 64, 64]_[8, 64, 64].cu  __init__.py  batch_matmul_1024_512.cu  batch_matmul_[64, 1, 512]_[64, 1024, 512]_[64, 1, 1024].cu  brt_thor.py  (+35 more)
brainstorm/: netlet.py
cmake/: Utils.cmake  brainstorm.cmake  nnfusion.cmake  tvm.cmake
data/: thor.csv  thor_fusion.csv  thor_origin.csv
docker/: Dockerfile.base  Dockerfile.msra  Dockerfile.sing  Dockerfile.update  az_show.sh  az_upload.sh  azure_build.py  build.py  build.sh  build_sing.sh  config_example.yaml  docker_build.py  install.sh  install_v100.sh  update.sh
microbench/: CMakeLists.txt  expert.py  exporter.py  horizontal_expert.sh  profiler.py
proto/: kernel.proto
sample/: Node.h  brainstorm.py  brt.py  graph_build.ipynb  heteo_fuse.py  hetero_fuse.py  homo_fuse.py  horizontal_fusion.ipynb  jit_compiler.ipynb  jit_tvm_tuner.ipynb  miscellanea.ipynb  miscellanea.py  onnx_graph.ipynb  primitive.ipynb  test.py
scripts/: az_upload.sh  build_github.py  docker_az_build.py  docker_gh_build.py  docker_run.sh  entrypoint.sh  fusion_expert.sh  gh_config.yaml  init_dev.sh  kernel_db_update.py  prepare_data.sh  registry.config  report_fusion_expert.sh  search_fusion_expert.sh  setup_bare.sh  setup_docker.sh  update_docker.sh  utils.sh
test/: CMakeLists.txt  auto_complete.ipynb  horizontal_fuse_test.cu  horizontal_fusion.py  kernel_test.cu  netlet_test.ipynb  prim_test.ipynb  processed_sample.cu  processed_sample_4_2.cu  processed_sample_4_3.cu  processed_sample_64_3.cu  recur_module.py  router_test.ipynb  test.cc  test.cu  test_netlet.py  thrust_test.cu
test/moe_examples/: helloworld_deepspeed.py
test/python/: fabric_test.py  flow_tensor_test.py  grid_tensor_test.py  jit_function.py  jit_function_test.py  jit_test.py  memory_plan_test.py  module_function.py  netlet_test.py  pass_test.py  preload_test.py  proto_tensor_test.py  router_test.py  weight_load_test.py
test/unittest/: netlet_test.py  router_test.py
(+1184 files in other folders)
